# go-it-web-hw6-SQL-basics

./: 001_number.sql  002_number.sql  003_number.sql  004_number.sql  005_number.sql  006_number.sql  007_number.sql  008_number.sql  009_number.sql  010_number.sql  011_number.sql  012_number.sql  README.md  SQL_basics.sqlite  all_number.sql  fill_in_the_tables.py  pyproject.toml  sql_script.sql
